fix profile rest api
